--- a/master-client-sdk/pom.xml
+++ b/master-client-sdk/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>logback-classic</artifactId>
             <version>1.5.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.53</version>
+        </dependency>
     </dependencies>
 
     <licenses>
