--- a/master-server/pom.xml
+++ b/master-server/pom.xml
@@ -84,6 +84,12 @@
             <artifactId>slf4j-api</artifactId>
             <version>2.0.13</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>2.0.53</version>
+        </dependency>
     </dependencies>
 
     <properties>
